tests/indexed-types/should_compile/T13092b/T13092b_2.hs
{-# LANGUAGE TypeFamilies #-}

module T13092b_2 where

import T13092b_1

x :: X
x = X
