tests/indexed-types/should_fail/ClosedFam3a.hs
module ClosedFam3a where

import {-# SOURCE #-} ClosedFam3
